--- a/TicketSales/Views/Shared/_Layout.cshtml
+++ b/TicketSales/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
                 <div class="col-12">
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
-                        <a href="index.html" class="logo">
+                            <a href="@Url.Action("Index", "Home")" class="logo">
                             <img src="~/images/logo.png" alt="">
                         </a>
                         <!-- ***** Logo End ***** -->
