--- a/TicketSales/Views/Users/Login.cshtml
+++ b/TicketSales/Views/Users/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@model TicketSales.Models.User
 @{
     ViewBag.Title = "Login";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LoginLayout.cshtml";
 }
 
 @using (Html.BeginForm())
