--- a/TicketSales/wwwroot/css/templatemo-cyborg-gaming.css
+++ b/TicketSales/wwwroot/css/templatemo-cyborg-gaming.css
@@ -138,7 +138,7 @@ body .page-content {
 
 p {
   font-size: 15px;
-  color: #666;
+  color: #999;
   line-height: 30px;
   margin-bottom: 0px;
 }
@@ -1746,4 +1746,28 @@ body {
     width:600px;
     height:350px;
     border-radius:30px;
+}
+
+
+.price-recap .price-item {
+    position:relative;
+}
+
+.price-recap .price-item h4 {
+    display: inline-block;
+    font-size: 15px;
+    margin-bottom: 5px;
+    padding-top: 15px;
+}
+
+.price-recap .price-item span {
+    color: #fff;
+    font-size: 19px;
+    display: block;
+}
+
+.search-results .item {
+    padding: 20px;
+    border: 1px solid #444;
+    border-radius: 23px;
 }
