--- a/TicketSales/Views/Shared/_Layout.cshtml
+++ b/TicketSales/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
                             <a href="@Url.Action("Index", "Home")" class="logo">
-                            <img src="~/images/logo.png" alt="">
+                            <img src="~/images/logoticket.png" alt="">
                         </a>
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Search End ***** -->
@@ -45,7 +45,8 @@
                             
                             <li>@Html.ActionLink("Home", "Index", "Home", null, new { @class = "active" })</li>
                             <li>@Html.ActionLink("Search", "Search", "Events", null)</li>
-                            <li>@Html.ActionLink("My Events", "MyEvents", "Events", null)</li>
+                            <li>@Html.ActionLink("Bookmarks", "Bookmarks", "Events", null)</li>
+                            <li>@Html.ActionLink("Reservations", "Index", "Reservations", null)</li>
                             <li><a asp-action="Index" asp-controller="Cart">
                                     <i class="fa-solid fa-cart-shopping me-1"></i>Cart 
                                     (<span id="cartCount"></span>)
@@ -87,57 +88,6 @@
     <script src="~/assets/js/popup.js"></script>
     <script src="~/assets/js/custom.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-
-    <script>
-        function updateCartCount() {
-            $.ajax({
-                url: '/Cart/GetCartCount',
-                type: 'GET',
-                success: function (data) {
-                    $('#cartCount').text(data);
-                }
-            });
-        }
-
-        $(document).ready(function () {
-            updateCartCount();
-            
-            $('.add-to-cart').click(function () {
-                let ticketId = $(this).data('ticket-id');
-                let ticketType = $(this).data('ticket-type');
-                let eventId = $(this).data('event-id');
-                let eventDate = $(this).data('event-date');
-                var description = $(this).data('description');
-                var quantity = 1;
-                var price = $(this).data('price');
-
-                $.ajax({
-                    url: '@Url.Action("AddToCart", "Cart")',
-                    type: 'POST',
-                    data: {
-                        ticketId: ticketId,
-                        eventId: eventId,
-                        eventDate: eventDate,
-                        description: description,
-                        ticketType: ticketType,
-                        quantity: quantity,
-                        price: price
-                    },
-                    success: function (response) {
-                        // Handle success (you can redirect, show a message, etc.)
-                        toastr.options.positionClass = 'toast-bottom-right';
-                        toastr.info('Ticket added to Cart !')
-                        updateCartCount();
-                    },
-                    error: function (error) {
-                        // Handle error
-                        console.log(error);
-                    }
-                });
-            });// Update count when the page loads
-        });
-    </script>
-
     
     @await RenderSectionAsync("Scripts", required: false)
 </body>
