--- a/TicketSales/Views/Cart/Index.cshtml
+++ b/TicketSales/Views/Cart/Index.cshtml
@@ -1,7 +1,15 @@
 ﻿@model List<CartItem>
 
 <h2>Shopping Cart</h2>
-@if(Model.Count ==0)
+
+@if (ViewBag.Message != null)
+{
+    <div class="alert alert-success mt-5" role="alert">
+      <h4 class="alert-heading"> @ViewBag.Message</h4>         
+      <h5 class="text-black">Check your reservations <a class="btn btn-link" href="/reservations/Index">here</a></h5>
+    </div>   
+}
+else@if(Model.Count ==0)
 {
     <p class="mt-5">Your cart is empty</P>
 }
@@ -17,9 +25,10 @@ else
                     <div class="left">
                         <h4>@item.EventDescription.</h4>
                         <span>Date : @item.EventDate</span>
+                        <span class="text-info">@item.Venue</span>
                     </div>
                         <ul>
-                            <li>@item.TicketType</li>
+                            <li class="ticket-type">@item.TicketType</li>
                             <li>Quantity: @item.Quantity</li>
                             <li>Price: @item.Price CAD</li>
                             <li><a class="btn btn-danger" asp-action="RemoveFromCart" asp-route-ticketId="@item.TicketID">Remove</a></li>
