--- a/TicketSales/Views/Home/Index.cshtml
+++ b/TicketSales/Views/Home/Index.cshtml
@@ -1,6 +1,8 @@
-﻿@model List<Event>
+﻿@using System.Security.Claims
+@model List<Event>
 @{
     ViewData["Title"] = "Home";
+    //int.TryParse(User.FindFirst(ClaimTypes.NameIdentifier)?.Value, out int loggedUserId);
 }
 
 <!-- Main Banner -->
@@ -10,10 +12,7 @@
             <div class="col-lg-12">
                 <div class="header-text">
                     <h6>Welcome To TicketRush</h6>
-                    <h4>Browse All <em>Events</em> Here</h4>
-                    <!--  <div class="main-button">
-                        <a href="@Url.Action("Browse", "Home")">Browse Now</a>
-                    </div>-->
+                    <h4>Browse All <em>Events</em> Here</h4>                   
                 </div>
             </div>
         </div>
@@ -48,27 +47,9 @@
                         </select>
                     </div>
                 </div>
-                <div class="row">
-                   
-                    @foreach (var evt in Model)
-                    {
-                        <div class="col-lg-3 col-sm-6">
-                            <div class="item">
-                                <a asp-action="Details" asp-controller="Events" asp-route-eventId="@evt.EventId">
-                                    <!-- Update the image source path to use the event ID -->
-                                    <img src="@Url.Content($"~/images/event{evt.EventId}.jpg")">
-                                    <h4>@evt.Title<br><span>@evt.EventType</span></h4>
-                                </a>
-                                
-                                <ul>
-                                    <li><i class="fa fa-calendar"></i> @evt.EventDateTime.ToString("MMM dd, yyyy")</li>
-                                    <li><i class="fa fa-map-marker"></i> @evt.Venue.City, @evt.Venue.Province</li>
-                                    <li><i class="fa fa-users"></i> @evt.Venue.Capacity</li>
-                                </ul>
-                            </div>
-                        </div>
-                    }
-                </div>
+                <div id="eventListContainer">
+                    @Html.Partial("_Events", Model)
+                </div>                
             </div>
         </div>
     </div>
