--- a/TicketSales/Views/Shared/_Layout.cshtml
+++ b/TicketSales/Views/Shared/_Layout.cshtml
@@ -15,9 +15,9 @@
     <!-- Additional CSS Files -->
     <link rel="stylesheet" href="~/css/fontawesome.css">
     <link rel="stylesheet" href="~/css/templatemo-cyborg-gaming.css">
-    <link rel="stylesheet" href="~/css/owl.css">
+    @* <link rel="stylesheet" href="~/css/owl.css">
     <link rel="stylesheet" href="~/css/animate.css">
-    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" /> *@
 </head>
 <body>
     @if (User.Identity.IsAuthenticated)
@@ -45,7 +45,7 @@
                             
                             <li>@Html.ActionLink("Home", "Index", "Home", null, new { @class = "active" })</li>
                             <li>@Html.ActionLink("Search", "Search", "Events", null)</li>
-                            <li>@Html.ActionLink("Bookmarks", "Bookmarks", "Events", null)</li>
+                            <li>@Html.ActionLink("Bookmarks", "Index", "Bookmarks", null)</li>
                             <li>@Html.ActionLink("Reservations", "Index", "Reservations", null)</li>
                             <li><a asp-action="Index" asp-controller="Cart">
                                     <i class="fa-solid fa-cart-shopping me-1"></i>Cart 
@@ -81,12 +81,7 @@
 
     <script src="~/vendor/jquery/jquery.min.js"></script>
     <script src="~/vendor/bootstrap/js/bootstrap.min.js"></script>
-    <script src="~/vendor/toastr/toastr.min.js"></script>
-    <script src="~/assets/js/isotope.min.js"></script>
-    <script src="~/assets/js/owl-carousel.js"></script>
-    <script src="~/assets/js/tabs.js"></script>
-    <script src="~/assets/js/popup.js"></script>
-    <script src="~/assets/js/custom.js"></script>
+    <script src="~/vendor/toastr/toastr.min.js"></script>   
     <script src="~/js/site.js" asp-append-version="true"></script>
     
     @await RenderSectionAsync("Scripts", required: false)
