--- a/TicketSales/wwwroot/css/templatemo-cyborg-gaming.css
+++ b/TicketSales/wwwroot/css/templatemo-cyborg-gaming.css
@@ -1788,3 +1788,8 @@ body {
     color: white;
     font-size: 14px;
 }
+
+.bookmarks img {
+    width: 100px !important;
+    height: 60px !important;
+}
